[package]
name = "webspy"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.5"
serde = "1.0.197"
serde_json = "1.0.114"
bincode = "1.3.3"
sqlx = "0.7.4"
sea-orm = {version = "0.12.9", features = ["sqlx-mysql", "runtime-actix", "runtime-actix-native-tls"]}
handlebars = "5.1.0"
uuid = {version = "1.8.0", features=["v4", "fast-rng"]}
chrono = {version = "0.4.35", features = ["serde"]}
once_cell = "1.19.0"
lazy_static = "1.4.0"
#futures = "0.3.30"
#futures-executor = "0.3.30"
#futures-util = "0.3.30"
#futures-timer = "3.0.3"
#futures-time = "3.0.0"
#tokio = {version="1.36.0", features=["full"]}